Cleaned up ListTest